--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,3 +8,9 @@
     text-align: center;
     margin: 0;
   }
+
+#downloads .btn-github {
+    display: none;
+    text-align: center;
+    margin: 0;
+}
